final edits to autopoiesis paper, added assignment five

--- a/systemsphilosophy/autopoiesis.tex
+++ b/systemsphilosophy/autopoiesis.tex
@@ -35,7 +35,7 @@ Can a paper, such as this one, composed by a human, symbol by symbol, word by wo
 
 To begin, we will define our core term and idea: autopoiesis.  Autopoiesis is the process of an entity creating itself.  Because of the inherent self-reference in this idea, the causality spins around in a loop and can be unfolded indefinitely, as in the notion that an autopoietic entity is a process that gives rise to and sustains the process that is giving rise to that process... ad infinitum.  The process is itself playing (at least) two roles, that of the generator and the thing being generated.  It is the product of that process of generation.  As the generator, it converts arbitrary form into the specific form of its being, and as a product it is this form which is generated, the form of the generator of that form.  This is a very special relationship between the components of an autopoietic system and one we will explore throughout this paper.  
 
-This topic is fraught with uncertainty.  Though the general idea is clear, tt is still dimly understood just what is necessary to call a system autopoietic, or how one would go about constructing an autopoietic system, or even what kind of dynamics are involved or required.  Thus this paper will be exploratory in nature, a process of discovery and generation itself.  I am hoping through the process of writing this paper I will be able to apply the notions of autopoiesis not just conceptually, but to build it directly into the structure of the paper itself.  Whether the answer to our question posed in the title is positive or negative, in as much as a paper can be autopoietic this one will be.  For this reason there will be much discourse of a self-referential nature as I tie the subject of the paper back to itself in various ways.  
+This topic is fraught with uncertainty.  Though the general idea is clear, it is still dimly understood just what is necessary to call a system autopoietic, or how one would go about constructing an autopoietic system, or even what kind of dynamics are involved or required.  Thus this paper will be exploratory in nature, a process of discovery and generation itself.  I am hoping through the process of writing this paper I will be able to apply the notions of autopoiesis not just conceptually, but to build it directly into the structure of the paper itself.  Whether the answer to our question posed in the title is positive or negative, in as much as a paper can be autopoietic this one will be.  For this reason there will be much discourse of a self-referential nature as I tie the subject of the paper back to itself in various ways.  
 
 Also, as the subject is inherently non-linear, so is the structure of this paper.  There is no sequence here, everything relates to everything else.  As much as I am able to tie any part back to any or all of the other parts of this paper I will do so, either explicitly or implicitly (which will be most of the time the latter).  It is an unfortunate but necessary challenge that this paper is nevertheless composed at its most basic level of a sequence of symbols.  The tension between the nonlinearity of the subject and the inherent linearity of the basic structure of the paper will be a subject itself in the section ``Turning linearity into full interconnectivity'' (notice this previous statement itself embodies a link between different parts of the paper, already forging connections between this essentially one dimensional medium, as well as providing an implicit connection through example to the original topic of this paragraph.  I will hopefully not continue to discourse too much on the specific occurrence of these links (though I will discourse on the nature of these links in due time).  This was merely an episode for demonstration's sake.  Though I do feel it somehow necessary later on to refer to my own discourse about my discourse, since it is the thing that this whole paper is composed of on a level somewhere above that of symbols).  
 
