--- a/ryan-spangler-cover-letter.tex
+++ b/ryan-spangler-cover-letter.tex
@@ -69,7 +69,7 @@ ryan.spangler@gmail.com
  
 I am writing to express interest in the Software Engineer position in your lab. Eran Agmon is an old friend from the Systems Science program at PDX where we shared Agent Based Systems, among other classes, and he reached out to tell me about it. 
 
-I am a Software Engineer with 11 years of professional experience in a variety of fields, most recently Computational Biology at OHSU. My emphasis is on designing highly distributed and concurrent systems with a priority on performance, and graph/network processing and analysis. My highest engineering value is simplicity. In a seeming contradiction, it turns out it is easy to make something complex, and hard to make something simple. In my experience this is because a real codebase is never finished, it is an ongoing process that is continually added to, and there is no inherent reason these additions harmonize with what is already there. There must be a continuous evaluation of the system as it grows and changes, and effort put in to integrate new changes in a way that works with the existing design. It takes commitment and dedication to achieve, but with the right patterns established and adhered to, this effort becomes a delight rather than a chore.
+I am a Software Engineer with 11 years of professional experience in a variety of fields, most recently Computational Biology at OHSU. I enjoy the work of translating the ideas and problems of the scientists I work with into working systems. I find a great synergy between the engineers and the biologists, once we have taken the time to understand each other. The thing we are trying to do lies somewhere between us, or rather, is larger than either, so it is in our combined energies that we will discover it. I find my background in Systems Science contributes much towards identifying how to align all the projects and components we have at hand into something that works together. 
 
 I started coding when I was six (my dad brought home a Commodore64 one day), and I have been coding ever since. However, I have discovered that code is not an end unto itself but rather a medium for the imagination, and what has captured my imagination is the cell. I find it endlessly fascinating to consider the various ways the cell functions, the different intertwined levels it operates within and between and how such an unimaginably complex system can function so effortlessly, so \textit{tenaciously}. It is to me the ultimate mystery and challenge of our time to compose an intelligible picture of cellular function. This is why I was excited to hear about the position. Composing separate models into a coherent whole, building a system to gather all of the information we are continually discovering about the cell and sythesizing it into a large interactive model is something I would love to be a part of. 
 
