--- a/cv-stanford.tex
+++ b/cv-stanford.tex
@@ -190,7 +190,7 @@
 \section{Interests}
 \cvitem{Biology}{Molecular Biology, Cell Biology, Systems Biology: How does life work?  How is this possible?}
 \cvitem{Music}{Piano Tuning, Music Theory, Performance: Exploring the space of all possible musical events and relationships.}
-\cvitem{Games}{I have published a board game - Sol: Last Days of a Star \url{http://elephantlaboratories.com/sol}}
+\cvitem{Games}{I have designed and published a board game - Sol: Last Days of a Star \url{http://elephantlaboratories.com/sol}}
 %%\cvitem{Go}{The ancient game of life and death.  I have learned many things about life from Go.}
 %% \cvitem{Naming}{Word Creation:  Words have to come from somewhere.  How about the Omnivoplax?} %nothingness?}
 %% \cvitem{Cognition}{Awareness examining itself:  Appreciating and unraveling the mystery of the nature of existence.}
