--- a/cv-stanford.tex
+++ b/cv-stanford.tex
@@ -195,24 +195,14 @@
 %% \cvitem{Naming}{Word Creation:  Words have to come from somewhere.  How about the Omnivoplax?} %nothingness?}
 %% \cvitem{Cognition}{Awareness examining itself:  Appreciating and unraveling the mystery of the nature of existence.}
 
-\section{References}
-\begin{cvcolumns}
-  %% \cvcolumn{Name}{\begin{itemize}\item Patrick Roberts\item[] \emph{Professor OHSU BME}\item Martin Linde\item[] \emph{Associate Creative Director at Apple}\end{itemize}}
-  %% \cvcolumn{Contact}{\begin{itemize}\item[] (503) 418-2620 | robertpa@ohsu.edu\item[]\item[] (503) 250-4844 | martin.linde01@gmail.com\item[]\end{itemize}}
-
-  \cvcolumn{Name}{\begin{itemize}\item Markus Covert\item[] \emph{Stanford Bioengineering}\item Jerry Morrison\item[] \emph{Allen Center}\end{itemize}}
-  \cvcolumn{Contact}{\begin{itemize}\item[] (650) 725-6615 \item[] mcovert@stanford.edu\item[] (650) 488-3541\item[] jerry.morrison@gmail.com\end{itemize}}
-
-  %% \cvcolumn{Name}{\begin{itemize}\item Patrick Roberts\item Martin Linde\end{itemize}}
-  %% \cvcolumn[0.75]{Contact}{\begin{itemize}\item Phone: (503) 418-2620  Email: robertpa@ohsu.edu\item Phone: (503) 250-4844 Email: martin.linde01@gmail.com\end{itemize}(more upon request)}
-
-  %% \cvcolumn{Name}{\begin{itemize}\item Patrick Roberts\item Martin Linde\end{itemize}}
-  %% \cvcolumn{Title}{\begin{itemize}\item[] \emph{Professor OHSU BME}\item[] \emph{Associate Creative Director at Apple}\end{itemize}}
-  %% \cvcolumn{Contact}{\begin{itemize}\item[] (503) 418-2620 | robertpa@ohsu.edu\item[] (503) 250-4844 | martin.linde01@gmail.com\end{itemize}}
+%% \section{References}
+%% \begin{cvcolumns}
+  %% \cvcolumn{Name}{\begin{itemize}\item Markus Covert\item[] \emph{Stanford Bioengineering}\item Jerry Morrison\item[] \emph{Allen Center}\end{itemize}}
+  %% \cvcolumn{Contact}{\begin{itemize}\item[] (650) 725-6615 \item[] mcovert@stanford.edu\item[] (650) 488-3541\item[] jerry.morrison@gmail.com\end{itemize}}
 
   %% \cvcolumn{Area}{\begin{itemize}\item Creative Designer\item Person 2\end{itemize}(more upon request)}
   %% \cvcolumn[0.5]{Contact}{\textit{That} person, and \textbf{those} also (all available upon request).}
-\end{cvcolumns}
+%% \end{cvcolumns}
 
 %% \section{Master thesis}
 %% \cvitem{title}{\emph{Title}}
