--- a/cv-stanford.tex
+++ b/cv-stanford.tex
@@ -118,7 +118,7 @@
 \item Created a schema to encode queries themselves as data so they can be programmatically generated, optimized and processed.
 %% \item Translated a series of requirements from researchers and scientists into a working system that provided these analyses.
 %% \item Developed systems of statistical analysis for existing experiments and data.
-\item Created a visualization framework to synthesize our various visualization methods into a general and reusable package.
+\item Created an interactive visualization for navigating and querying the live graph. 
 \item Engineered a distributed event system to trigger pattern-discovery analyses as data streams into the system.
 \end{itemize}}
 
