--- a/cv-stanford.tex
+++ b/cv-stanford.tex
@@ -188,8 +188,8 @@
 %% \cvitem{2011}{Codex - Co-lead community workshop on creative coding and programming art}
 
 \section{Interests}
-\cvitem{Biology}{Molecular Biology, Cell Biology, Systems Biology: How does life work?  How is this possible?}
-\cvitem{Music}{Piano Tuning, Music Theory, Performance: Exploring the space of all possible musical events and relationships.}
+\cvitem{Biology}{Molecular Biology, Cell Biology, Systems Biology: How does life work?  How can these principles be discovered and applied to other realms?}
+\cvitem{Music}{Piano Tuning, Music Theory, Performance: Exploring the space of all possible musical events and relationships. \url{https://soundcloud.com/youdonotexist/sessessation}}
 \cvitem{Games}{I have designed and published a board game - Sol: Last Days of a Star \url{http://elephantlaboratories.com/sol}}
 %%\cvitem{Go}{The ancient game of life and death.  I have learned many things about life from Go.}
 %% \cvitem{Naming}{Word Creation:  Words have to come from somewhere.  How about the Omnivoplax?} %nothingness?}
