iteration from feedback

--- a/cv-stanford.tex
+++ b/cv-stanford.tex
@@ -49,7 +49,7 @@
 \social[twitter]{elephantnahpele}                             % optional, remove / comment the line if not wanted
 %\extrainfo{additional information}                 % optional, remove / comment the line if not wanted
 %\photo[64pt][0.4pt]{picture}                       % optional, remove / comment the line if not wanted; '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
-\quote{Patterns in Connections}                                 % optional, remove / comment the line if not wanted
+\quote{Discovering Patterns in Connections}                                 % optional, remove / comment the line if not wanted
 
 \definecolor{seagreen}{HTML}{23B886}% seagreen
 \definecolor{joy}{HTML}{6BB32B}
@@ -85,9 +85,9 @@
 \section{Summary of Qualifications}
 
 \begin{itemize}
-\item Software engineer specializing in computational infrastructure for biological modeling.
-\item 13 years of professional experience working in cancer genomics and proteomics, whole-cell modeling, workflow development and graph database design and implementation.
-\item Interested in working on biological discoveries, scientific research and applications for biologically inspired algorithms. 
+\item Software engineer specializing in computational infrastructure for biological modeling and data.
+\item 13 years of professional experience working in cancer genomics, proteomics, whole-cell modeling, workflow development and graph database design and implementation.
+\item Interested in working computational frameworks for biological discovery, scientific research and applications for biologically inspired algorithms. 
 \end{itemize}
 
 \section{Experience}
@@ -100,21 +100,21 @@
 %% \item Created a platform for distributed multi-scale modeling of composable whole-cell simulations that exchange resources with a shared molecular environment, with a websockets-based interactive visualization:
 
 
-\cventry{2018--present}{Software Engineer}{Stanford Bioengineering - Covert Lab}{Stanford CA}{}{At Stanford I coordinate the efforts of building a whole-cell model with graduate students, postdocs and PI's, here and in collaboration with other institutions. Beyond the code I provide computational support, design consultation, implementation strategies and pair programming mentorship and feedback. In addition, I lead a consistent and productive practice of code reviews, pull requests, continuous integration, version control and other software engineering best practices.\newline{}
+\cventry{2018--present}{Software Engineer}{Stanford Bioengineering - Covert Lab}{Stanford CA}{}{I coordinate the efforts of the whole-cell modeling team with graduate students, postdocs and PI's, and in collaboration with other institutions. Beyond the code, I provide computational support, design consultation, implementation strategies and pair programming mentorship. In addition, I lead a consistent and productive practice of code reviews, pull requests, continuous integration, version control and other software engineering best practices.\newline{}
 \textbf{Achievements}:
 \begin{itemize}
 \item Created a platform for distributed multi-scale modeling of whole-cell colonies in a shared molecular environment, with a websockets-based interactive visualization:
 \url{http://github.com/CovertLab/vivarium}
 %% \item Worked with graduate students and postdocs to provide computational support, design consultation, implementation strategies and pair programming mentorship and feedback.
-\item Built a workflow and execution system on Google Cloud to run whole-cell simulations and colony experiments:
+\item Built a workflow and execution system on Google Cloud to run whole-cell simulations and whole-colony experiments:
 \url{http://github.com/CovertLab/sisyphus}
 %% \item Lead a consistent and productive practice of code reviews, pull requests, continuous integration, version control and other software engineering best practices.
 \item Implemented a generalized version of the Gillespie algorithm in C to get around a critical performance bottleneck:
 \url{http://github.com/CovertLab/arrow}
-\item Worked with the whole-cell and live-cell teams to solve challenges of computational scale and organization.
+\item Worked with the experimental teams to solve challenges of computational scale and organization for imaging and microscopy data.
 \end{itemize}}
 
-\cventry{2016--2018}{Software Engineer}{OHSU - Computational Biology}{Portland OR}{}{At OHSU I worked with scientists and engineers to determine what infrastructure and analysis is needed to support all of the different research efforts at the University. My main focus was the development of a graph database for cancer genomics to provide a means to query, analyze and visualize this data as a whole.\newline{}
+\cventry{2016--2018}{Software Engineer}{OHSU - Computational Biology}{Portland OR}{}{At OHSU I worked with scientists and engineers to build on infrastructure and analysis pipelines to support all of the different research efforts at the University. My main focus was the development of a graph database for cancer genomics to provide a means to query, analyze and visualize this data as a whole.\newline{}
 \textbf{Achievements}:
 \begin{itemize}
 \item Engineered a large graph database system that automatically transforms and integrates all incoming data into a single graph
@@ -133,7 +133,7 @@
 \item Used bayesian networks and random forest to build a classification system of user behavior.
 %% \item Migrated the flat document data model into a graph database oriented around the relationships between semantic terms and networks of people.
 %% \item Took a naive analysis algorithm and parallelized it to work over any sized cluster of independent workers.
-\item Released much of the infrastructure as open source:
+\item Released much of the infrastructure as open-source:
 \url{https://github.com/littlebird}
 %% \item Built a recommendation engine based on Jaccard similarity.
 %% \item Identified and expunged a pre-existing and propagating data corruption, building an ongoing data validation system in the process.
@@ -167,7 +167,7 @@
   %% \item Gained insight into the methods of controlling and manipulating a running JVM process
   %% \item Built an asynchronous browser-based websockets interface to a service running on the backend
   %% \end{itemize}
-\item Pioneered a weekly workshop for collaboratively learning 3D programming:  %, developing a new process for collaboratively learning code: 
+\item Pioneered a weekly workshop for collaboratively learning 3D graphics programming:  %, developing a new process for collaboratively learning code: 
 % \url{http://weareinstrument.com/3d-workshop/index.html}
 %%   \begin{itemize}
 %% %  \item Guiding the learning of developers of many skill levels in a way that is effective for everyone;
@@ -205,7 +205,7 @@
 \section{Interests}
 \cvitem{Biology}{Molecular Biology, Cell Biology, Systems Biology: How does life work?  How can these principles be discovered and applied to other realms?}
 \cvitem{Music}{Piano Tuning, Music Theory, Performance: Exploring the space of all possible musical spaces and relationships.} %\url{https://soundcloud.com/youdonotexist/sessessation}}
-\cvitem{Games}{I have designed and published an award-winning board game - Sol: Last Days of a Star \url{http://elephantlaboratories.com/sol}}
+\cvitem{Games}{I have designed and published an award-winning board game - Sol: Last Days of a Star. \url{http://elephantlaboratories.com/sol}}
 %%\cvitem{Go}{The ancient game of life and death.  I have learned many things about life from Go.}
 %% \cvitem{Naming}{Word Creation:  Words have to come from somewhere.  How about the Omnivoplax?} %nothingness?}
 %% \cvitem{Cognition}{Awareness examining itself:  Appreciating and unraveling the mystery of the nature of existence.}
