--- a/cv-stanford.tex
+++ b/cv-stanford.tex
@@ -87,7 +87,7 @@
 \begin{itemize}
 \item Software engineer specializing in computational infrastructure for biological modeling and data.
 \item 13 years of professional experience working in cancer genomics, proteomics, whole-cell modeling, workflow development and graph database design and implementation.
-\item Interested in working computational frameworks for biological discovery, scientific research and applications for biologically inspired algorithms. 
+\item Interested in developing computational frameworks for biological discovery, scientific research and applications for biologically inspired algorithms. 
 \end{itemize}
 
 \section{Experience}
