--- a/cv-stanford.tex
+++ b/cv-stanford.tex
@@ -126,11 +126,11 @@
 \item Engineered a distributed event system to trigger pattern-discovery analyses as data streams into the system.
 \end{itemize}}
 
-\cventry{2014--2016}{Lead Developer}{Little Bird Technologies}{Portland OR}{}{At Little Bird I took their mass of social network data and apply graph theoretical, statistical and machine learning methods to find patterns and draw conclusions from that data.\newline{}
+\cventry{2014--2016}{Lead Developer}{Little Bird Technologies}{Portland OR}{}{At Little Bird I took their mass of social network data and applied graph theoretical, statistical and machine learning methods to find patterns and draw conclusions from that data.\newline{}
 \textbf{Achievements}:
 \begin{itemize}
-\item Built a 3d network visualization to explore and interact with vast, interconnected data.
-\item Used bayesian networks and random forest to build a classification system of user behavior.
+\item Built a 3D network visualization to explore and interact with vast, interconnected data.
+\item Used Bayesian networks and random forest to build a classification system of user behavior.
 %% \item Migrated the flat document data model into a graph database oriented around the relationships between semantic terms and networks of people.
 %% \item Took a naive analysis algorithm and parallelized it to work over any sized cluster of independent workers.
 \item Released much of the infrastructure as open-source:
@@ -140,12 +140,12 @@
 \item Instituted a workshop for collaboratively improving the whole team's coding and software development skills, starting by implementing well-known graph algorithms.
 \end{itemize}}
 
-\cventry{2007--2014}{Senior Developer}{Instrument}{Portland OR}{}{I worked with the labs team to transform concepts through code into practical applications.\newline{}
+\cventry{2007--2014}{Senior Developer}{Instrument}{Portland OR}{}{I worked with the Labs team to transform concepts through code into practical applications.\newline{}
 % Turning impossible ideas into seamless experiences was a daily practice.\newline{}
 % I explored novel approaches using code that tapped previously unknown possibilities, ultimately finding ways to harness them for practical applications.
 \textbf{Achievements}:
 \begin{itemize}
-\item Created Caribou --- an open source Clojure web ecosystem for building large high-performance web applications with great alacrity.
+\item Created Caribou --- an open source Clojure web ecosystem for building large high-performance web applications with great alacrity:
 \url{https://github.com/caribou}
 %%   \begin{itemize}
 %%   \item Lead an interdisciplinary team in developing a large open source project
@@ -167,7 +167,7 @@
   %% \item Gained insight into the methods of controlling and manipulating a running JVM process
   %% \item Built an asynchronous browser-based websockets interface to a service running on the backend
   %% \end{itemize}
-\item Pioneered a weekly workshop for collaboratively learning 3D graphics programming:  %, developing a new process for collaboratively learning code: 
+\item Pioneered a weekly workshop for collaboratively learning 3D graphics programming.  %, developing a new process for collaboratively learning code: 
 % \url{http://weareinstrument.com/3d-workshop/index.html}
 %%   \begin{itemize}
 %% %  \item Guiding the learning of developers of many skill levels in a way that is effective for everyone;
@@ -179,8 +179,8 @@
 \cventry{2006--2007}{Programmer}{Performance Logic}{Portland OR}{}{I learned the fundamentals of real world development using C++ while simplifying and modularizing a large legacy code base.\newline{}
 \textbf{Achievements}:%
 \begin{itemize}%
-\item Built a variety of visualization methods for generating reports from large data sets
-\item Enhanced the custom scripting language with features from functional programming
+\item Built a variety of visualization methods for generating reports from large data sets.
+\item Enhanced the custom scripting language with features from functional programming.
 %% \item Gathered sprawling instances of similar functionality and consolidated into clear, simple modules that could be reused everywhere
 \end{itemize}}
 
